feat: save release in mongo
